@@ -1,3 +1,12 @@
+2019-11-15  Luo Xiong Hu  <luoxhu@linux.ibm.com>
+
+	* ipa-comdats.c: Fix comments typo.
+	* ipa-profile.c: Fix comments typo.
+	* tree-profile.c (gimple_gen_ic_profiler): Use the new variable
+	__gcov_indirect_call.counters and __gcov_indirect_call.callee.
+	(gimple_gen_ic_func_profiler): Likewise.
+	(pass_ipa_tree_profile::gate): Fix comments typo.
+
 2019-11-15  Xiong Hu Luo  <luoxhu@linux.ibm.com>
 
 	* ipa-inline.c (inline_small_functions): Update iterator of next.
